EPMDJ-2044: fix covered methods sidebar
Issue: EPMDJ-2044

--- a/src/pages/agent-full-page/coverage-plugin/test-details/covered-methods-by-test-type-sidebar/covered-methods-by-test-type-sidebar.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/test-details/covered-methods-by-test-type-sidebar/covered-methods-by-test-type-sidebar.module.scss
@@ -27,7 +27,6 @@
   }
 
   &__method-info-label {
-    min-width: 52px;
     line-height: 32px;
     text-align: right;
     color: map-get($color-palette, dark-blue);
